--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+diagrama-voting-app*
+status_persistence_file.txt
